tests/compile-fail/tracked_fn_return_ref.stderr
error: a reference tied to the database lifetime does not implement `SalsaValue`; return an owned value instead
  --> tests/compile-fail/tracked_fn_return_ref.rs:15:67
   |
15 | fn tracked_fn_return_ref<'db>(db: &'db dyn Db, input: MyInput) -> &'db str {
   |                                                                   ^^^^^^^^

error[E0277]: the tracked function's return type `ContainsRef<'db>` does not implement `SalsaValue`
  --> tests/compile-fail/tracked_fn_return_ref.rs:23:6
   |
23 | ) -> ContainsRef<'db> {
   |      ^^^^^^^^^^^^^^^^ does not implement `SalsaValue`
   |
help: the trait `salsa::salsa_value::helper::SalsaValueOutput<'_, ContainsRef<'static>>` is not implemented for `ContainsRef<'db>`
  --> tests/compile-fail/tracked_fn_return_ref.rs:10:1
   |
10 | struct ContainsRef<'db> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: consider deriving `salsa::SalsaValue` for the tracked function's return type if it is safe to retain across revisions
note: required by a bound in `salsa::plumbing::assert_salsa_value_output`
  --> src/salsa_value.rs
   |
   |     pub const fn assert_salsa_value_output<'db, Static, Output>(_: PhantomData<&'db ()>)
   |                  ------------------------- required by a bound in this function
   |     where
   |         Output: SalsaValueOutput<'db, Static>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value_output`

error[E0277]: the tracked function's return type `ContainsRef<'db>` does not implement `SalsaValue`
  --> tests/compile-fail/tracked_fn_return_ref.rs:33:6
   |
33 | ) -> ContainsRef<'_> {
   |      ^^^^^^^^^^^^^^^ does not implement `SalsaValue`
   |
help: the trait `salsa::salsa_value::helper::SalsaValueOutput<'_, ContainsRef<'static>>` is not implemented for `ContainsRef<'db>`
  --> tests/compile-fail/tracked_fn_return_ref.rs:10:1
   |
10 | struct ContainsRef<'db> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: consider deriving `salsa::SalsaValue` for the tracked function's return type if it is safe to retain across revisions
note: required by a bound in `salsa::plumbing::assert_salsa_value_output`
  --> src/salsa_value.rs
   |
   |     pub const fn assert_salsa_value_output<'db, Static, Output>(_: PhantomData<&'db ()>)
   |                  ------------------------- required by a bound in this function
   |     where
   |         Output: SalsaValueOutput<'db, Static>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value_output`
